--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -59,4 +64,11 @@ height: 300px; /* 高さ120px */
 footer {
   width: 100%; /* 横幅いっぱい */
   height: 120px; /* 高さ120px */
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+color: #fff;
 }
